# nau-emscripten

./: .gitignore  MyApplication.html  MyApplication.js  app.js  build-em.sh  build.sh  magnum_batch_install.sh  package-lock.json  package.json
src/: CMakeLists.txt  Cube.cpp  MyApplication.cpp  MyApplication.h  Types.h
